--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,13 @@ ol {
   font-weight: 400;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src:
+    local("Roboto"),
+    local("Roboto-Regular"),
+    url(../public/fonts//roboto-regular.woff2) format("woff2");
+}
