--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,13 @@ ol {
     local("Roboto-Regular"),
     url(../public/fonts//roboto-regular.woff2) format("woff2");
 }
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  src:
+    local("Poppins"),
+    local("Poppins-Regular"),
+    url(../public/fonts/Poppins-Regular.woff2) format("woff2");
+}
