--- a/src/pages/LeaderboardPage/LeaderboardPage.module.css
+++ b/src/pages/LeaderboardPage/LeaderboardPage.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 672px;
+  width: 944px;
   margin: 0 auto;
   padding: 26px;
   padding-top: 22px;
@@ -24,67 +24,13 @@
   margin-bottom: 35px;
 }
 
-p {
+.title {
   color: #fff;
-  font-family: StratosSkyeng;
+  font-family: Roboto, sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 32px;
   text-align: left;
-}
-
-.title {
-  color: #004980;
-  text-align: center;
-  font-variant-numeric: lining-nums proportional-nums;
-  font-family: StratosSkyeng;
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 48px;
-}
-
-.levels {
-  display: flex;
-  flex-direction: row;
-  gap: 26px;
-  margin-top: 48px;
-  margin-bottom: 28px;
-}
-
-.level {
-  display: flex;
-  width: 97px;
-  height: 98px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
-
-  border-radius: 12px;
-  background: #fff;
-}
-
-.levelLink {
-  color: #0080c1;
-  text-align: center;
-  font-family: StratosSkyeng;
-  font-size: 64px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 72px;
-  text-decoration: none;
-}
-
-.levelLink:visited {
-  color: #0080c1;
-}
-
-.checkbox {
-  display: inline;
-}
-
-.light {
-  color: #004980;
 }
 
 .leaders {
@@ -118,56 +64,86 @@ p {
 }
 
 .position {
-  font-family: StratosSkyeng;
+  width: 178px;
+
+  font-family: Poppins;
+  font-style: normal;
   font-size: 24px;
   font-weight: 400;
   line-height: 32px;
+
   text-align: left;
+
   color: #000;
 }
 
 .position_header {
-  font-family: StratosSkyeng;
+  width: 178px;
+
+  font-family: Roboto, sans-serif;
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
+
   line-height: 32px;
+
   text-align: left;
+
   color: #999;
 }
 
 .user {
-  font-family: StratosSkyeng;
+  width: 324px;
+
+  font-family: Poppins;
   font-size: 24px;
   font-weight: 400;
+
   line-height: 32px;
+
   text-align: left;
+
   color: #000;
 }
 
 .user_header {
-  font-family: StratosSkyeng;
+  width: 324px;
+
+  font-family: Roboto, sans-serif;
   font-size: 24px;
   font-weight: 400;
+
   line-height: 32px;
+
   text-align: left;
+
   color: #999;
 }
 
 .time {
-  font-family: StratosSkyeng;
+  width: 102px;
+
+  font-family: Poppins;
   font-size: 24px;
   font-weight: 400;
+
   line-height: 32px;
+
   text-align: left;
+
   color: #000;
 }
 
 .time_header {
-  font-family: StratosSkyeng;
+  width: 102px;
+
+  font-family: Roboto, sans-serif;
   font-size: 24px;
   font-weight: 400;
+
   line-height: 32px;
+
   text-align: left;
+
   color: #999;
 }
