--- a/src/pages/SelectLevelPage/SelectLevelPage.module.css
+++ b/src/pages/SelectLevelPage/SelectLevelPage.module.css
@@ -65,8 +65,36 @@
 
 .checkbox {
   display: inline;
+  appearance: none;
+  /* width: 30px;
+  height: 30px; */
+  /* opacity: 0; */
+
+  background: #fff;
+}
+
+.checkbox:checked {
+  width: 22px;
+  height: 17.24px;
+  border-left: 5px solid #7ac100;
+  border-bottom: 5px solid #7ac100;
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  opacity: 1;
+}
+
+.checkbox:not(:checked) {
+  opacity: 1;
 }
 
 .light {
-  color: #004980;
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  text-align: center;
+
+  /* color: #004980; */
 }
