--- a/src/pages/SelectLevelPage/SelectLevelPage.module.css
+++ b/src/pages/SelectLevelPage/SelectLevelPage.module.css
@@ -62,6 +62,35 @@
 .levelLink:visited {
   color: #0080c1;
 }
+.checkbox:checked,
+.checkbox:not(:checked) {
+  display: inline-block;
+  position: relative;
+  padding-left: 28px;
+  line-height: 20px;
+}
+
+.checkbox + label::before,
+.checkbox:checked + label::before,
+.checkbox:not(:checked) + label::before {
+  content: "";
+  left: 0px;
+  top: 0px;
+  width: 18px;
+  height: 18px;
+  border: 1px solid #dddddd;
+  background-color: #ffffff;
+}
+
+.checkbox + label::after,
+.checkbox:checked::after,
+.checkbox:not(:checked)::after {
+  content: "";
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
 
 .checkbox {
   display: inline;
@@ -70,7 +99,7 @@
   height: 30px; */
   /* opacity: 0; */
 
-  background: #fff;
+  background: #c2f5ff;
 }
 
 .checkbox:checked {
