--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -75,3 +75,13 @@
   color: greenyellow;
   display: block;
 }
+
+.exit {
+  cursor: pointer;
+  position: relative;
+  width: 32px;
+  height: 32px;
+  background-image: url('/public/exit.svg');
+  background-repeat: no-repeat;
+  bottom: 4px;
+}
