--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -115,3 +115,14 @@
   z-index: 2;
   transform: rotateY(180deg);
 }
+
+@media (max-width: 600px) {
+  .card {
+    width: 60px;
+    height: 90px;
+  }
+  /* Уменьшите шрифты, если текст не влезает */
+  .rank {
+    font-size: 12px !important;
+  }
+}
