--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,6 @@ html {
 body {
   background-color: #004980;
   margin: 0;
-  overflow: hidden;
-  height: 100vh;
   width: 100vw;
 }
 
@@ -17,8 +15,8 @@ body {
 
 @media (max-width: 720px) {
   :root {
-    --card-width: min(60px, 20vw);
-    --card-height: min(90px, 30vw);
+    --card-width: min(60px, 15vw);
+    --card-height: min(90px, 22vw);
   }
 }
 
@@ -33,7 +31,9 @@ body {
 #root {
   width: 100%;
   height: 100%;
-}
+  display: flex;
+  flex-direction: column;
+  overflow: auto;}
 
 h1,
 h2,
