--- a/src/components/EndGameModal/EndGameModal.module.css
+++ b/src/components/EndGameModal/EndGameModal.module.css
@@ -1,39 +1,20 @@
-.inputContainer {
-  position: relative;
-  width: 276px;
-  margin: 15px 0;
-  display: flex;
-  align-items: center
-}
-
 .modal {
-  max-width: 100%;
-  width: 488px;
-  height: fit-content;
+  width: 480px;
+  height: 459px;
   border-radius: 12px;
   background: #c2f5ff;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: min(90%, 400px);
-  max-height: 80vh;
-  overflow-y: auto;
   &_leaderboard {
     height: 100vh;
   }
-  box-sizing: border-box;
 }
-
-@supports (-webkit-touch-callout: none) {
-  .modal {
-    -webkit-overflow-scrolling: touch;
+  
+.modal_height {
+    height: 634px;
   }
-}
 
 .image {
   width: 96px;
@@ -64,7 +45,20 @@
   font-weight: 400;
   line-height: 32px;
   text-align: center;
-  box-sizing: border-box
+}
+
+.inputContainer {
+  position: relative;
+  width: 276px;
+  margin: 15px 0;
+  display: flex;
+  align-items: center
+}
+
+@supports (-webkit-touch-callout: none) {
+  .modal {
+    -webkit-overflow-scrolling: touch;
+  }
 }
 
 .user:focus {
@@ -116,4 +110,17 @@
   height: 32px;
   background-image: url('/public/arrow-right-direction-green-icon.svg');
   background-repeat: no-repeat;
+}
+
+@media(max-width: 720px) {
+  .modal {
+    width: calc(100% - 20px);
+    height: fit-content;
+  }
+  .title {
+    font-size: 28px;
+  }
+  .user {
+    width: 200px;
+  }
 }
