--- a/src/pages/SelectLevelPage/SelectLevelPage.module.css
+++ b/src/pages/SelectLevelPage/SelectLevelPage.module.css
@@ -133,3 +133,28 @@
   margin-top: 18px;
   color: #004980;
 }
+
+@media (max-width: 720px) {
+  .modal {
+    width: calc(100% - 20px);
+    gap: 16px;
+    height: auto;
+    padding: 28px 0;
+  }
+  .levels {
+    justify-content: center;  
+    gap: 10px;  
+    margin-top: 24px;  
+    margin-bottom: 20px;
+  }
+
+  .level {
+    width: 80px;  
+    height: 80px;  
+  }
+
+  .levelLink {
+    font-size: 48px;  
+    line-height: 56px;
+  }
+}
